# linscale

./: .env.example  .env.sample  AGENTS.md  README.md  STAGES.md  linode-cli-pod.yaml  linode-cli-secret.yaml.tpl  list-gpus.sh  main.sh  pyproject.toml
cert-manager/: cluster-issuer.yaml  deploy.sh  destroy.sh  rbac.yaml  secret-guide.md  values.yaml
cert-manager/issuers/: letsencrypt-prod.yaml
karpenter/: STAGES.md  deploy.sh  destroy.sh  linode-cli-secret.yaml.tpl  list-gpus.sh  test-karpenter.sh  values.yaml
linode-cli/: DEPLOYMENT.md  deploy.sh  deployment.yaml  destroy.sh  linode-cli-pod.yaml  select-instance.sh
linode-firewall/: deploy.sh  destroy.sh  doc.md  values.yaml
research/: bipolar-mixed-episodes-clinical-reference.md
skynet/: .env.example  README.md
skynet/github/workflows/: build.yaml
skynet/scripts/: deploy.sh  destroy.sh  release.sh
skynet/templates/: deployment.yaml.tpl  ingress.yaml.tpl  nodepool.yaml.tpl  pvc.yaml.tpl  service.yaml.tpl  wildcard-cert.yaml.tpl
traefik/: GUIDE.md  deploy.sh  destroy.sh  ingress-route.yaml  values.yaml
workload/: .env.example  myapp.last-run.yaml
workload/scripts/: README.md  deploy.sh  destroy.sh  select-instance.sh
workload/templates/: cert.yaml.tpl  deployment.yaml.tpl  firewall.yaml.tpl  ingress.yaml.tpl  nodepool.yaml.tpl  pvc.yaml.tpl  service.yaml.tpl  wildcard-cert.yaml.tpl
