[project]
name = "linscale"
version = "0.1.0"
description = ""
authors = [
    {name = "rere-dnaw",email = "rafal.wilk92@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
